--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,11 @@ env/
 .venv
 
 # IDE
-.vscode/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
 .idea/
 *.swp
 *.swo
