--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ sentence-transformers>=2.2.2
 transformers>=4.35.0
 torch>=2.0.0
 chromadb>=0.4.18
-llama-cpp-python>=0.2.20
+# Optional local inference backend (disabled in CI to avoid heavy wheel builds)
+# Install locally if needed: pip install llama-cpp-python
+# llama-cpp-python>=0.2.20
 fastembed>=0.3.4
 
 # File system and monitoring
